# BXB_tools

./: .gitignore  COPOLICY.md  PROMPTS.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
UI/: README.md  __init__.py
UI/banxuebang_homework/: README.md  __init__.py  direct_tool_backend.py  interfaces.py  run.py  tk_app.py
banxuebang-homework/: LICENSE  README.md  SKILL.md  _meta.json  banxuebang.py  banxuebang_gui.py  pyproject.toml  requirements.txt
scripts/: call-tool.js  direct-tool.js  publish-scan.js  setup-agent.js  ui-server.js
src/: banxuebang-client.js  index.js  session-store.js  tool-definitions.js
ui/: index.html
