[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "banxuebang-homework-helper"
version = "1.0.0"
description = "Unofficial Banxuebang homework helper with CLI and Tkinter GUI."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "IGpig" }
]
keywords = ["banxuebang", "homework", "playwright", "tkinter", "education"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Win32 (MS Windows)",
  "Environment :: X11 Applications",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
  "playwright>=1.40",
  "requests>=2.31",
]

[project.optional-dependencies]
windows = [
  "win10toast>=0.9; sys_platform == 'win32'",
]

[project.scripts]
banxuebang-cli = "banxuebang:main"
banxuebang-gui = "banxuebang_gui:main"

[tool.setuptools]
py-modules = ["banxuebang", "banxuebang_gui"]
